// Copyright (c) 2000-2015 TeamDev Ltd. All rights reserved.
// TeamDev PROPRIETARY and CONFIDENTIAL.
// Use is subject to license terms.
syntax = "proto3";

package spine3.sample.order.event;

import "sample/order/order.proto";

option java_package="org.spine3.sample.order.event";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;

message OrderCreated {
    OrderId order_id = 1;
}

message OrderLineAdded {
    OrderId order_id = 1;
    OrderLine order_line = 2;
}

message OrderLineRemoved {
    OrderId order_id = 1;
    OrderLine order_line = 2;
}

message OrderPayed {
    OrderId order_id = 1;
    BillingInfo billing_info = 2;
}